--- a/acore/seq/Makefile
+++ b/acore/seq/Makefile
@@ -1,9 +1,7 @@
-TOPDIR = ../..
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
-
-EXTRA_CLEAN = seq_clientmgr.c seq_memory.c
+clean-files := seq_clientmgr.c seq_memory.c
 
 obj-$(CONFIG_SND_SERIALMIDI) += snd-seq-midi.o snd-seq.o snd-seq-device.o snd-seq-midi-event.o
 obj-$(CONFIG_SND_MSND_PINNACLE) += snd-seq-midi.o snd-seq.o snd-seq-device.o snd-seq-midi-event.o
@@ -14,12 +12,11 @@ obj-$(CONFIG_SND_AU8830) += snd-seq-midi.o snd-seq.o snd-seq-device.o snd-seq-mi
 export-objs  := seq_device.o seq.o seq_instr.o seq_midi_emul.o \
 		seq_midi_event.o seq_virmidi.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/core/seq/Makefile
+include $(SND_TOPDIR)/alsa-kernel/core/seq/Makefile
 
-EXTRA_CFLAGS = -I$(TOPDIR)/alsa-kernel/core/seq
+EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/core/seq
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
 
-seq_clientmgr.c: seq_clientmgr.patch $(TOPDIR)/alsa-kernel/core/seq/seq_clientmgr.c
-seq_memory.c: seq_memory.patch $(TOPDIR)/alsa-kernel/core/seq/seq_memory.c
+seq_clientmgr.c: seq_clientmgr.patch $(SND_TOPDIR)/alsa-kernel/core/seq/seq_clientmgr.c
+seq_memory.c: seq_memory.patch $(SND_TOPDIR)/alsa-kernel/core/seq/seq_memory.c
