--- a/acore/seq/oss/Makefile
+++ b/acore/seq/oss/Makefile
@@ -1,15 +1,12 @@
-TOPDIR = ../../..
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+clean-files := seq_oss.c
 
-EXTRA_CLEAN = seq_oss.c
+include $(SND_TOPDIR)/alsa-kernel/core/seq/oss/Makefile
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/core/seq/oss/Makefile
+EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/core/seq/oss
 
-EXTRA_CFLAGS = -I$(TOPDIR)/alsa-kernel/core/seq/oss
+include $(SND_TOPDIR)/Rules.make
 
-include $(TOPDIR)/Rules.make
-
-seq_oss.c: seq_oss.patch $(TOPDIR)/alsa-kernel/core/seq/oss/seq_oss.c
+seq_oss.c: seq_oss.patch $(SND_TOPDIR)/alsa-kernel/core/seq/oss/seq_oss.c
