--- a/acore/seq/Makefile
+++ b/acore/seq/Makefile
@@ -5,7 +5,7 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-clean-files := seq_clientmgr.c seq_memory.c
+clean-files := seq.c seq_clientmgr.c seq_memory.c
 
 export-objs  := seq_device.o seq.o seq_instr.o seq_midi_emul.o \
 		seq_midi_event.o seq_virmidi.o
@@ -16,5 +16,6 @@ EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/core/seq
 
 include $(SND_TOPDIR)/Rules.make
 
+seq.c: seq.patch $(SND_TOPDIR)/alsa-kernel/core/seq/seq.c
 seq_clientmgr.c: seq_clientmgr.patch $(SND_TOPDIR)/alsa-kernel/core/seq/seq_clientmgr.c
 seq_memory.c: seq_memory.patch $(SND_TOPDIR)/alsa-kernel/core/seq/seq_memory.c
